Tue Sep  9 00:34:47 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mvm.c (specific_key): must be initialized.

	* st.c (st_init_table_with_size, ADD_DIRECT): fixed typo.

Mon Sep  8 20:10:12 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (power_cache_get_power0): no need to register address.

Mon Sep  8 17:26:51 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* st.c (garbage_collect): checks if memory can be reclaimed.

Mon Sep  8 07:09:42 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: some adjustments.

	* rational.c: ditto.

Mon Sep  8 06:38:22 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (XLDFLAGS): added --enable-auto-import for cygwin and
	  mingw.

	* dir.c (rb_dir_open), io.c (rb_sysopenat, rb_openat): resolved
	  conflicts.

	* thread_pthread.c (get_stack): defines only if possible.

	* thread.c (rb_thread_check_trap_pending): fix for MVM.

	* thread.c (rb_queue_empty_p): added.

	* vm_core.h (rb_thread_set_current_raw): fixed typo.

Mon Sep  8 02:04:25 2008  Tanaka Akira  <akr@fsij.org>

	* include/ruby/encoding.h (rb_econv_set_replacement): renamed from
	  rb_econv_set_replacemenet.

	* transcode.c: follow the renaming.

Mon Sep  8 01:10:41 2008  Tanaka Akira  <akr@fsij.org>

	* tool/transcode-tblgen.rb (transcode_tblgen): log message refined.

Mon Sep  8 00:58:04 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c: removed unused code.

Mon Sep  8 00:04:09 2008  Tanaka Akira  <akr@fsij.org>

	* enc/trans/iso2022.trans: upcase to iso-2022-jp.

	* enc/emacs_mule.c: ditto.

Sun Sep  7 23:46:36 2008  Tanaka Akira  <akr@fsij.org>

	* enc/trans/iso2022.trans: stateless-iso-2022-jp is defined to avoid
	  undefined conversion error between iso-2022-jp and the corresponding
	  stateless encoding.

	* enc/emacs_mule.c: replicate emacs-mule as stateless-iso-2022-jp.

Sun Sep  7 20:03:01 2008  Tanaka Akira  <akr@fsij.org>

	* enc/trans/escape.trans (hexstr): renamed from str1.
